[package]
name = "vault_poc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
hex = "0.4.3"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.2"
serde = "1.0.160"
sha256 = "1.1.2"
json-canon = "0.1.3"